--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		
 		<link href="./_app/immutable/assets/0.Chm3mYLn.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.C3T3QDoS.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DRB4MnQM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DC62SIbi.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DbUM2Rw6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D8qzaRXm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BU-tLS9o.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B7sHHJB3.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Ybgu63lV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D8ORQMku.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bc9tibMd.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.cpDKYJVJ.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.D7oe_ndd.js"><!-- HEAD_svelte-1nen96w_START --> <!-- HTML_TAG_START --><script>(function setInitialMode({ defaultMode, themeColors: themeColors2, darkClassNames: darkClassNames2 = ["dark"], lightClassNames: lightClassNames2 = [], defaultTheme = "" }) {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.6P2-eDYo.js"><!-- HEAD_svelte-1nen96w_START --> <!-- HTML_TAG_START --><script>(function setInitialMode({ defaultMode, themeColors: themeColors2, darkClassNames: darkClassNames2 = ["dark"], lightClassNames: lightClassNames2 = [], defaultTheme = "" }) {
   const rootEl = document.documentElement;
   const mode = localStorage.getItem("mode-watcher-mode") || defaultMode;
   const theme2 = localStorage.getItem("mode-watcher-theme") || defaultTheme;
@@ -45,12 +45,12 @@
 })({"defaultMode":"system","darkClassNames":["dark"],"lightClassNames":[],"defaultTheme":"","modeStorageKey":"mode-watcher-mode","themeStorageKey":"mode-watcher-theme"});</script><!-- HTML_TAG_END --><!-- HEAD_svelte-1nen96w_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">   <h1 class="mt-8 text-4xl font-bold w-full text-center" data-svelte-h="svelte-ogujtk">Familiar technologies</h1> <img src="skills.svg" alt="Technologies" class="mx-auto svelte-rjyzvg"> <hr class="w-1/3 mx-auto my-8"> <h1 class="text-4xl font-bold w-full text-center" data-svelte-h="svelte-d2c4nr">Project demos</h1> <main class="grid justify-center svelte-rjyzvg"><div class="m-8" style="grid-row: span 1 / auto"><video controls class="svelte-1kaiv87"><source src="skillscatter.webm"><track kind="captions"></video> <a class="text-blue-600 dark:text-blue-500 hover:underline cursor-pointer text-xl mt-1 block" href="https://rkest.github.io/skillscatter/" target="_blank">Skillscatter</a> <p><!-- HTML_TAG_START -->A tool for visualizing skills written in Svelte for UX with C++ compiled to WASM for generating the word cloud.<!-- HTML_TAG_END --></p> </div> <div class="m-8" style="grid-row: span 2 / auto"><video controls class="svelte-1kaiv87"><source src="fourier.mp4"><track kind="captions"></video> <a class="text-blue-600 dark:text-blue-500 hover:underline cursor-pointer text-xl mt-1 block" href="https://github.com/RKest/fourier_stm" target="_blank">Music visualizer</a> <p><!-- HTML_TAG_START -->Music visualizer written for STM32 and MEMS analog microphone implemented using FFT. 
-		<br>Make sure to turn up the sound on this one.<!-- HTML_TAG_END --></p> </div> <div class="m-8" style="grid-row: span 1 / auto"><video controls class="svelte-1kaiv87"><source src="lsystems.mp4"><track kind="captions"></video> <a class="text-blue-600 dark:text-blue-500 hover:underline cursor-pointer text-xl mt-1 block" href="https://github.com/RKest/LSTree" target="_blank">LSTree</a> <p><!-- HTML_TAG_START -->Procedurally generated trees using Lyndenmayer systems rendered with OpenGL.<!-- HTML_TAG_END --></p> </div> <div class="m-8" style="grid-row: span 1 / auto"><video controls class="svelte-1kaiv87"><source src="mahjong.webm"><track kind="captions"></video> <a class="text-blue-600 dark:text-blue-500 hover:underline cursor-pointer text-xl mt-1 block" href="https://github.com/RKest/mahaipp" target="_blank">Mahai</a> <p><!-- HTML_TAG_START -->Reinforcement network playing Riichi Mahjong implemented based on stable baselines3 implementation.<!-- HTML_TAG_END --></p> </div></main> <hr class="w-1/3 mx-auto my-8"> <h1 class="mt-8 text-4xl font-bold w-full text-center" data-svelte-h="svelte-1uqawac">Contact</h1> <p class="text-center" data-svelte-h="svelte-1wjwlqc"><a href="mailto:max.ind@o2.pl">max.ind@o2.pl</a> <br> <span>+48 660 811 115</span></p> <hr class="w-1/3 mx-auto my-8"> 
+		<div style="display: contents">   <h1 class="mt-8 text-4xl font-bold w-full text-center" data-svelte-h="svelte-ogujtk">Familiar technologies</h1> <img src="skills.svg" alt="Technologies" class="mx-auto svelte-rjyzvg"> <hr class="w-1/3 mx-auto my-8"> <h1 class="text-4xl font-bold w-full text-center" data-svelte-h="svelte-d2c4nr">Project demos</h1> <main class="grid justify-center svelte-rjyzvg"><div class="m-8" style="grid-row: span 1 / auto"><video controls class="svelte-1kaiv87"><source src="skillscatter.webm"><track kind="captions"></video> <a class="text-blue-600 dark:text-blue-500 hover:underline cursor-pointer text-xl mt-1 block" href="https://rkest.github.io/skillscatter/" target="_blank">Skillscatter</a> <a class="text-blue-600 dark:text-blue-500 hover:underline cursor-pointer mt-1 block" href="https://github.com/RKest/skillscatter" target="_blank">Web applicaiton source code </a><a class="text-blue-600 dark:text-blue-500 hover:underline cursor-pointer mt-1 block" href="https://github.com/RKest/rect_pack" target="_blank">C++ wasm module source code </a> <p><!-- HTML_TAG_START -->A tool for visualizing skills written in Svelte for UX with C++ compiled to WASM for generating the word cloud.<!-- HTML_TAG_END --></p> </div> <div class="m-8" style="grid-row: span 2 / auto"><video controls class="svelte-1kaiv87"><source src="fourier.mp4"><track kind="captions"></video> <a class="text-blue-600 dark:text-blue-500 hover:underline cursor-pointer text-xl mt-1 block" href="https://github.com/RKest/fourier_stm" target="_blank">Music visualizer</a>  <p><!-- HTML_TAG_START -->Music visualizer written for STM32 and MEMS analog microphone implemented using FFT. 
+		<br>Make sure to turn up the sound on this one.<!-- HTML_TAG_END --></p> </div> <div class="m-8" style="grid-row: span 1 / auto"><video controls class="svelte-1kaiv87"><source src="lsystems.mp4"><track kind="captions"></video> <a class="text-blue-600 dark:text-blue-500 hover:underline cursor-pointer text-xl mt-1 block" href="https://github.com/RKest/LSTree" target="_blank">LSTree</a>  <p><!-- HTML_TAG_START -->Procedurally generated trees using Lyndenmayer systems rendered with OpenGL.<!-- HTML_TAG_END --></p> </div> <div class="m-8" style="grid-row: span 1 / auto"><video controls class="svelte-1kaiv87"><source src="mahjong.webm"><track kind="captions"></video> <a class="text-blue-600 dark:text-blue-500 hover:underline cursor-pointer text-xl mt-1 block" href="https://github.com/RKest/mahaipp" target="_blank">Mahai</a>  <p><!-- HTML_TAG_START -->Reinforcement network playing Riichi Mahjong implemented based on stable baselines3 implementation.<!-- HTML_TAG_END --></p> </div></main> <hr class="w-1/3 mx-auto my-8"> <h1 class="mt-8 text-4xl font-bold w-full text-center" data-svelte-h="svelte-1uqawac">Contact</h1> <p class="text-center" data-svelte-h="svelte-1wjwlqc"><a href="mailto:max.ind@o2.pl">max.ind@o2.pl</a> <br> <span>+48 660 811 115</span></p> <hr class="w-1/3 mx-auto my-8"> 
 			
 			<script>
 				{
-					__sveltekit_184ys2k = {
+					__sveltekit_cwpx4j = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/portfolio"
 					};
@@ -60,8 +60,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DRB4MnQM.js"),
-						import("./_app/immutable/entry/app.Ybgu63lV.js")
+						import("./_app/immutable/entry/start.DbUM2Rw6.js"),
+						import("./_app/immutable/entry/app.D8ORQMku.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
